Search query alias mapping was not web-farm compatible

--- a/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/_CreateOrUpdate.cshtml
@@ -78,7 +78,7 @@
 			</td>
 			<td class="adminData">
 				@Html.DropDownListFor(model => model.FacetSorting, Model.AvailableFacetSortings)
-				@Html.ValidationMessageFor(model => model.DisplayOrder)
+				@Html.ValidationMessageFor(model => model.FacetSorting)
 			</td>
 		</tr>
     </table>
