--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
@@ -3,14 +3,14 @@
 @using SmartStore.Web.Models.Checkout;
 @using SmartStore.Web.Models.Common;
 @{
-    Layout = "_Checkout";
+	Layout = "_Checkout";
 
-    //title
-    Html.AddTitleParts(T("PageTitle.Checkout").Text);
+	//title
+	Html.AddTitleParts(T("PageTitle.Checkout").Text);
 
-    string termsLink = "<a id='terms-of-service-trigger' class='read' data-toggle='modal' data-target='#terms-of-service-modal'>";
-    string disclaimerLink = "<a id='disclaimer-trigger' class='read' data-toggle='modal' data-target='#terms-of-service-modal'>";
-    string terms = string.Format(T("Checkout.TermsOfService.IAccept"), termsLink, "</a>", disclaimerLink);
+	string termsLink = "<a id='terms-of-service-trigger' class='read' data-toggle='modal' data-target='#terms-of-service-modal'>";
+	string disclaimerLink = "<a id='disclaimer-trigger' class='read' data-toggle='modal' data-target='#terms-of-service-modal'>";
+	string terms = string.Format(T("Checkout.TermsOfService.IAccept"), termsLink, "</a>", disclaimerLink);
 }
 @section orderProgress{
     @{ Html.RenderAction("CheckoutProgress", "Checkout", new { step = CheckoutProgressStep.Confirm }); }
@@ -21,8 +21,8 @@
     </div>
     <div class="page-body checkout-data">
         @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "confirm-order-form" }))
-        {
-            Html.RenderWidget("checkout_confirm_top");
+		{
+			Html.RenderWidget("checkout_confirm_top");
 
             <div class="page-intro">
                 @Html.Raw(@T("Checkout.ConfirmHint"))
@@ -32,8 +32,8 @@
 			<input type="hidden" id="SubscribeToNewsLetterHidden" name="SubscribeToNewsLetterHidden" />
 			<input type="hidden" id="AcceptThirdPartyEmailHandOverHidden" name="AcceptThirdPartyEmailHandOverHidden" />
 
-            if (Model.TermsOfServiceEnabled)
-            {
+			if (Model.TermsOfServiceEnabled)
+			{
             <div class="terms-of-service alert alert-info">
                 <script type="text/javascript">
                     $(document).ready(function () {
@@ -63,7 +63,7 @@
                 </div>
 
             </div>
-            }
+			}
 
             <script type="text/javascript">
                 $(document).ready(function () {
@@ -75,22 +75,22 @@
 
             <div class="confirm-order">
                 @if (Model.Warnings.Count > 0)
-                {
+				{
 					<p>
 						<div class="alert alert-danger">
 							<ul>
 								@for (int i = 0; i < Model.Warnings.Count; i++)
-                                {
+								{
 									<li>@Html.Raw(Model.Warnings[i])</li>
-                                }
+								}
 							</ul>
 						</div>
 					</p>
-                }
+				}
             </div>  
-        }
+		}
         
-        Html.RenderWidget("checkout_confirm_before_summary");
+        @{ Html.RenderWidget("checkout_confirm_before_summary"); }
 
         <div class="order-summary-body">
             @{ Html.RenderAction("OrderSummary", "ShoppingCart", new { prepareAndDisplayOrderReviewData = true }); }
