--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasShoppingCart.cshtml
@@ -85,10 +85,11 @@
                     }
 
                     <div class="toolbar">
-
-                        <input class="qty-input input-sm" value="@item.Quantity" data-update-url="@(Url.Action("UpdateOcCartItem", "ShoppingCart"))"
-                               data-sci-id="@item.Id" data-min-qty="1" data-max-qty="1000" data-qty-step="1" data-type="cart" />
-
+                        <div class="qty-input">
+                            <input class="input-sm form-control" type="text" value="@item.Quantity" data-update-url="@(Url.Action("UpdateOcCartItem", "ShoppingCart"))"
+                                   data-sci-id="@item.Id" data-min-qty="1" data-max-qty="1000" data-qty-step="1" data-type="cart" />
+                        </div>
+                        
                         <a class="btn btn-danger btn-sm btn-icon remove ajax-cart-link"
                            href="#"
                            rel="nofollow"
