--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Wishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Wishlist.cshtml
@@ -76,27 +76,32 @@
 		</td>
 		<td class="text-nowrap" style="width:170px">
 			@if (Model.IsEditable)
-			{
-				if (item.AllowedQuantities.Count > 0)
-				{
-				    <select name="itemquantity@(item.Id)" class="qty-dropdown noskin">
-					    @foreach (var qty in item.AllowedQuantities)
-					    {
-						    <option selected="@qty.Selected" value="@qty.Value">@qty.Value</option>
-					    }
-				    </select>
-				}
-				else
-				{
-					<input id="itemquantity@(item.Id)" name="itemquantity@(item.Id)" type="text" value="@(item.Quantity)" class="qty-input"/>
+            {
+                if (item.AllowedQuantities.Count > 0)
+                {
+                    <select name="itemquantity@(item.Id)" class="qty-dropdown noskin">
+                        @foreach (var qty in item.AllowedQuantities)
+                        {
+                            <option selected="@qty.Selected" value="@qty.Value">@qty.Value</option>
+                        }
+                    </select>
+                }
+                else
+                {
+                    <div class="qty-input">
+				        <input id="itemquantity@(item.Id)" name="itemquantity@(item.Id)" type="text" value="@(item.Quantity)" class="form-control" />
+                    </div>
 
                     <script type="text/javascript">
                         $(function () {
-                            //TODO NewAlpha: implement step in admin product detail
                             $("#itemquantity@(item.Id)").TouchSpin({
                                 min: @item.MinOrderAmount,
                                 max: @item.MaxOrderAmount,
-                                step: 1
+                                step: 1,
+                                buttondown_class: 'btn btn-secondary',
+                                buttonup_class: 'btn btn-secondary',
+                                buttondown_txt: '<i class="fa fa-minus"></i>',
+                                buttonup_txt: '<i class="fa fa-plus"></i>'
                             });
                         });
                     </script>
@@ -104,8 +109,8 @@
             }
             else
             {
-				<span>@item.Quantity</span>
-			}
+                <span>@item.Quantity</span>
+            }
 		</td>
 		<td class="text-nowrap text-success omega">
 			<span class="product-subtotal">@item.SubTotal</span>
