Altered last commit & included FontAwesome into CKEditor

--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/ProductBreadcrumb.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/ProductBreadcrumb.cshtml
@@ -33,5 +33,5 @@
 
     <li class="breadcrumb-item active">@Model.ProductName</li>
 
-    @{ Html.RenderWidget("productbreadcrumb_after"); };
+    @{ Html.RenderWidget("productbreadcrumb_after"); }
 </ol>
