--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Price.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Price.cshtml
@@ -2,6 +2,7 @@
 
 @using System.Globalization;
 @using SmartStore.Web.Models.Catalog;
+@using SmartStore.Core.Domain.Catalog;
 
 @{
 	if (Model.AddToCart.DisableBuyButton && Model.AddToCart.DisableWishlistButton)
@@ -9,6 +10,7 @@
 		return;
 	}
 
+	var isBundleItem = Model.BundleItem.Id > 0 && Model.ProductType != ProductType.BundledProduct;
 	var priceModel = Model.ProductPrice;
 
 	var currentPrice = priceModel.PriceWithDiscount.NullEmpty() ?? priceModel.Price;
@@ -20,6 +22,8 @@
 
 	var oldPrice2 = priceModel.PriceWithDiscount.HasValue() ? priceModel.Price : "";
 	var oldPrice2Label = priceModel.NoteWithoutDiscount;
+
+	var basePriceEnabled = isBundleItem ? priceModel.BundleItemShowBasePrice : Model.IsBasePriceEnabled;
 
 	if (oldPrice2.HasValue() && !oldPrice1.HasValue())
 	{
@@ -42,13 +46,16 @@
 		<div class="pd-group clearfix">
 			<div class="clearfix">
 				<div class="pd-price-block">
-					<meta itemprop="priceCurrency" content="@WorkContext.WorkingCurrency.CurrencyCode" />
+					@if (!isBundleItem)
+					{
+						<meta itemprop="priceCurrency" content="@WorkContext.WorkingCurrency.CurrencyCode" />
+					}
 					@if (blocksHaveLabel)
-				{
+					{
 						<div class="pd-price-label">@currentPriceLabel</div>
-				}
-					<div class="pd-price@(priceModel.OldPrice.HasValue() ? " pd-price--offer" : "")@(priceModel.CallForPrice ? " pd-price--call" : "")">
-						@if (!priceModel.CallForPrice)
+					}
+					<div class="pd-price@(priceModel.OldPrice.HasValue() ? " pd-price--offer" : "")@(priceModel.CallForPrice ? " pd-price--call" : "")@(isBundleItem ? " pd-price-sm" : "")">
+						@if (!priceModel.CallForPrice && !isBundleItem)
 						{
 							<meta itemprop="price" content="@currentPriceValue.ToString("F", CultureInfo.InvariantCulture)" />
 						}
@@ -59,10 +66,10 @@
 				{
 					<div class="pd-price-block">
 						@if (blocksHaveLabel)
-					{
+						{
 							<div class="pd-price-label">@oldPrice2Label</div>
-					}
-						<div class="pd-price">
+						}
+						<div class="pd-price@(isBundleItem ? " pd-price-sm" : "")">
 							@Html.Raw(oldPrice2)
 						</div>
 					</div>
@@ -93,13 +100,16 @@
 		</div>
 
 		<!-- Tier prices -->
-		Html.RenderAction("ProductTierPrices", new { productId = Model.Id });
+		if (!isBundleItem)
+		{
+			Html.RenderAction("ProductTierPrices", new { productId = Model.Id });
+		}
 
 		<!-- Pangv & legal info -->
-		if (Model.IsBasePriceEnabled || Model.ShowLegalInfo)
+		if (basePriceEnabled || Model.ShowLegalInfo)
 		{
 			<div class="pd-group">
-				@if (Model.IsBasePriceEnabled && Model.BasePriceInfo.HasValue())
+				@if (basePriceEnabled && Model.BasePriceInfo.HasValue())
 				{
 					<div class="pd-pangv">
 						@Html.Raw(Model.BasePriceInfo)
