--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.StockInfo.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.StockInfo.cshtml
@@ -1,6 +1,7 @@
 ﻿@model ProductDetailsModel
 
 @using SmartStore.Web.Models.Catalog;
+@using SmartStore.Core.Domain.Catalog;
 
 @{
 	var displayStock = Model.StockAvailability.HasValue();
@@ -13,14 +14,19 @@
 		return;
 	}
 
+	var isBundleItem = Model.BundleItem.Id > 0 && Model.ProductType != ProductType.BundledProduct;
+
 	var statusLabel = Model.DisplayDeliveryTimeAccordingToStock ? Model.DeliveryTimeName : Model.StockAvailability;
 	var statusColor = Model.DisplayDeliveryTimeAccordingToStock && !displayStock ? Model.DeliveryTimeHexValue : "";
 }
 
-<div class="pd-group pd-stock-info">
-	<meta itemprop="availability" content="http://schema.org/@(Model.IsAvailable ? "InStock" : "OutOfStock")" />
+<div class="pd-stock-info@(isBundleItem ? "" : " pd-group")">
 	@if (displayStock)
 	{
+		if (!isBundleItem)
+		{
+			<meta itemprop="availability" content="http://schema.org/@(Model.IsAvailable ? "InStock" : "OutOfStock")" />
+		}
 		<div class="pd-stock @(Model.IsAvailable ? "pd-instock" : "pd-outofstock")">@Model.StockAvailability</div>
 	}
 
@@ -65,7 +71,7 @@
 
 @if (Model.DisplayBackInStockSubscription && Model.IsCurrentCustomerRegistered)
 {
-	using (Html.BeginZoneContent("end"))
+	using (Html.BeginZoneContent("end", key: "backinstock-subscription-modal"))
 	{
 		<div id="backinstock-subscription-modal" class="modal fade" tabindex="-1">
 			<div class="modal-dialog" role="document">
