--- a/src/Presentation/SmartStore.Web/Views/Shared/EditorTemplates/QtyInput.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/EditorTemplates/QtyInput.cshtml
@@ -10,22 +10,13 @@
 <div class="qty-input@(Model.QuantityUnitName.HasValue() ? " has-postfix" : "")">
 	@if (inputStyle == "spinner")
 	{
-		@Html.TextBoxFor(model => model.EnteredQuantity, new { @class = "form-control" + (large ? " form-control-lg" : "") })
-		<script>
-			$(function () {
-				// TODO: (mc) > (mh) Implement "Step" in admin product detail
-				$('#@Html.IdFor(model => model.EnteredQuantity)').TouchSpin({
-					min: @Model.MinOrderAmount,
-					max: @Model.MaxOrderAmount,
-					step: 1,
-					postfix: @Html.Raw(Model.QuantityUnitName.HasValue() ? Model.QuantityUnitName.EncodeJsString() : "undefined"),
-					buttondown_class: 'btn btn-secondary',
-					buttonup_class: 'btn btn-secondary',
-					buttondown_txt: '<i class="fa fa-minus"></i>',
-					buttonup_txt: '<i class="fa fa-plus"></i>',
-				});
-			});
-		</script>
+		@Html.TextBoxFor(model => model.EnteredQuantity, new {
+           @class = "form-control" + (large ? " form-control-lg" : ""),
+           data_min = Model.MinOrderAmount,
+           data_max = Model.MaxOrderAmount,
+           data_postfix = Model.QuantityUnitName,
+           data_step = 1
+       })
 	}
 	else
 	{
