--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
@@ -59,8 +59,8 @@
 
                 <div class="toolbar">
                     <div class="qty-input">
-                        <input class="form-control input-sm" type="text" value="@item.Quantity" data-update-url="@(Url.Action("UpdateOcCartItem", "ShoppingCart"))"
-                               data-sci-id="@item.Id" data-min-qty="1" data-max-qty="1000" data-qty-step="1" data-type="wishlist" />
+                        <input class="form-control input-sm" type="text" value="@item.EnteredQuantity" data-update-url="@(Url.Action("UpdateOcCartItem", "ShoppingCart"))"
+                               data-sci-id="@item.Id" data-min="@(item.MinOrderAmount)" data-max="@(item.MaxOrderAmount)" data-postfix="@(item.QuantityUnitName)" data-step="1" data-type="wishlist" />
                     </div>
 
                     @if (Model.ShowItemsFromWishlistToCartButton)
