--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
@@ -129,9 +129,9 @@
 
         @if (Model.DisplayWeight)
 		{
-        <td class="weight text-nowrap">
-            <span class="product-weight">@((item.Weight * item.Quantity).ToString("N2")) kg</span>
-        </td>
+            <td class="weight text-nowrap">
+                <span class="product-weight">@((item.Weight * item.EnteredQuantity).ToString("N2")) kg</span>
+            </td>
         }
 
 		<td class="unit-price text-nowrap">
@@ -152,27 +152,14 @@
                 else
                 {
                     <div class="qty-input">
-                        <input id="qty-input-@(item.Id)" name="itemquantity@(item.Id)" type="text" value="@(item.Quantity)" class="form-control" />   
+                        <input id="qty-input-@(item.Id)" name="itemquantity@(item.Id)" type="text" value="@(item.EnteredQuantity)" class="form-control"
+                               data-min="@(item.MinOrderAmount)" data-max="@(item.MaxOrderAmount)" data-postfix="@(item.QuantityUnitName)" data_step="1" />   
                     </div>
-                    <script type="text/javascript">
-                        $(function () {
-                            $("#qty-input-@(item.Id)").TouchSpin({
-                                min: @item.MinOrderAmount,
-                                max: @item.MaxOrderAmount,
-                                step: 1,
-                                postfix: "@item.QuantityUnit",
-                                buttondown_class: 'btn btn-secondary',
-                                buttonup_class: 'btn btn-secondary',
-                                buttondown_txt: '<i class="fa fa-minus"></i>',
-                                buttonup_txt: '<i class="fa fa-plus"></i>'
-                            });
-                        });
-                    </script>
                 }
             }
             else
             {
-				<span>@item.Quantity</span>
+				<span>@item.EnteredQuantity</span>
 			}
 		</td>
 		<td class="text-nowrap omega">
@@ -234,10 +221,10 @@
 								{
 									@item.ProductName
 								}
-								@if (item.Quantity > 1 && item.BundlePerItemShoppingCart)
+								@if (item.EnteredQuantity > 1 && item.BundlePerItemShoppingCart)
 								{
 									<text>
-										&#215;&nbsp;@item.Quantity
+										&#215;&nbsp;@item.EnteredQuantity
 									</text>
 								}
 							</div>
