--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Wishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Wishlist.cshtml
@@ -90,23 +90,9 @@
                 else
                 {
                     <div class="qty-input">
-				        <input id="itemquantity@(item.Id)" name="itemquantity@(item.Id)" type="text" value="@(item.EnteredQuantity)" class="form-control"
-                               data-min="@(item.MinOrderAmount)" data-max="@(item.MaxOrderAmount)" data-postfix="@(item.QuantityUnitName)" data_step="1" />
+				        <input id="itemquantity@(item.Id)" name="itemquantity@(item.Id)" type="text" value="@item.EnteredQuantity" class="form-control"
+                               data-min="@item.MinOrderAmount" data-max="@item.MaxOrderAmount" data-postfix="@item.QuantityUnitName" data-step="@item.QuantityStep" />
                     </div>
-
-                    @*<script type="text/javascript">
-                        $(function () {
-                            $("#itemquantity@(item.Id)").TouchSpin({
-                                min: @item.MinOrderAmount,
-                                max: @item.MaxOrderAmount,
-                                step: 1,
-                                buttondown_class: 'btn btn-secondary',
-                                buttonup_class: 'btn btn-secondary',
-                                buttondown_txt: '<i class="fa fa-minus"></i>',
-                                buttonup_txt: '<i class="fa fa-plus"></i>'
-                            });
-                        });
-                    </script>*@
                 }
             }
             else
