--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.scss
@@ -266,6 +266,10 @@ h4, h5, h6, .h4, .h5, .h6 {
     font-size: $font-size-sm;
 }
 
+.label {
+    border: 1px solid #fff;
+}
+
 
 
 //
@@ -578,23 +582,25 @@ h4, h5, h6, .h4, .h5, .h6 {
         //outline-color: rgba(0,0,0, 0.15);
 
         &:after {
+            box-sizing: content-box;
             position: absolute;
             z-index: 1;
             display: block;
-            right: 1px;
-            bottom: 1px;
-            background-color: rgba(#fff, 1);
-            border-top-left-radius: 3px;
+            right: -6px;
+            top: -6px;
+            background-color: $brand-warning;
+            border-radius: 50%;
+            border: 1px solid #fff;
 
-            width: 1rem;
-            height: 1rem;
-            line-height: 1rem;
+            width: 16px;
+            height: 16px;
+            line-height: 16px;
             text-align: center;
             vertical-align: middle;
 
             font-family: FontAwesome;
             content: "\f00c"; // check
-            color: $brand-warning;
+            color: #fff;
             font-size: 10px;
         }
 	}
