--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
@@ -52,7 +52,7 @@
 			<td class="productpicture text-nowrap">
 				@if (item.Picture.ImageUrl.HasValue())
 				{
-					<img class="img-polaroid" alt="@item.Picture.AlternateText" src="@item.Picture.ImageUrl" title="@item.Picture.Title" style="max-width:@(Model.MediaDimensions)px;max-height:@(Model.MediaDimensions)px"/>
+					<img alt="@item.Picture.AlternateText" src="@item.Picture.ImageUrl" title="@item.Picture.Title" style="max-width:@(Model.MediaDimensions)px;max-height:@(Model.MediaDimensions)px"/>
 				}
 			</td>
 		}
@@ -140,22 +140,7 @@
 		<td class="text-nowrap" style="width:170px">
 			@if (Model.IsEditable)
             {
-                if (item.AllowedQuantities.Count > 0)
-                {
-                    <select name="itemquantity@(item.Id)" class="qty-dropdown noskin">
-                        @foreach (var qty in item.AllowedQuantities)
-                        {
-                            <option selected="@qty.Selected" value="@qty.Value">@qty.Value</option>
-                        }
-                    </select>
-                }
-                else
-                {
-                    <div class="qty-input">
-                        <input id="qty-input-@(item.Id)" name="itemquantity@(item.Id)" type="text" value="@item.EnteredQuantity" class="form-control"
-                               data-min="@item.MinOrderAmount" data-max="@item.MaxOrderAmount" data-postfix="@item.QuantityUnitName" data-step="@item.QuantityStep" />   
-                    </div>
-                }
+                @Html.EditorFor(x => item, "QtyInput", new { itemId = "itemquantity{0}".FormatWith(item.Id) })
             }
             else
             {
@@ -207,7 +192,7 @@
 							<div class="bundle-item-image" style="@("min-width: {0}px; min-height: {0}px;".FormatInvariant(Model.BundleThumbSize + 10))">
 								@if (item.Picture.ImageUrl.HasValue() && !item.BundleItem.HideThumbnail)
 								{
-									<img class="img-polaroid" src="@item.Picture.ImageUrl" alt="@item.Picture.AlternateText" title="@item.Picture.Title" />
+									<img src="@item.Picture.ImageUrl" alt="@item.Picture.AlternateText" title="@item.Picture.Title" />
 								}
 							</div>
 						}						
@@ -402,8 +387,8 @@
 			}
 		</table>
 
-                if (Model.IsEditable)
-                {
+        if (Model.IsEditable)
+        {
 			<div class="common-buttons clearfix">
 				<button type="submit" name="updatecart" value="updatecart" class="btn btn-secondary pull-right update-cart-button">
 					<i class="fa fa-refresh"></i>&nbsp;@T("ShoppingCart.UpdateCart")
@@ -413,7 +398,7 @@
                 </button>
 				<input type="submit" name="startcheckout" value="startcheckout" id="startcheckout" style="display: none;" />
 			</div>
-                }
+        }
 
 		<div class="cart-footer row m-t-3">
 
