--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Wishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Wishlist.cshtml
@@ -15,13 +15,13 @@
 		@if (Model.IsEditable)
 		{
 			<td class="remove">
-				<input type="checkbox" name="removefromcart" value="@(item.Id)" />
+				<input type="checkbox" name="removefromcart" value="@item.Id" />
 			</td>
 		}
 		@if (Model.DisplayAddToCart)
 		{
 			<td class="addtocart">
-				<input type="checkbox" name="addtocart" value="@(item.Id)" />
+				<input type="checkbox" name="addtocart" value="@item.Id" />
 			</td>
 		}
 		@if (Model.ShowSku)
@@ -35,7 +35,7 @@
 			<td class="productpicture text-nowrap">
 				@if (item.Picture.ImageUrl.HasValue())
 				{
-					<img class="img-polaroid" alt="@item.Picture.AlternateText" src="@item.Picture.ImageUrl" title="@item.Picture.Title" />
+					<img alt="@item.Picture.AlternateText" src="@item.Picture.ImageUrl" title="@item.Picture.Title" />
 				}
 			</td>
 		}
@@ -77,23 +77,7 @@
 		<td class="text-nowrap" style="width:170px">
 			@if (Model.IsEditable)
             {
-                
-                if (item.AllowedQuantities.Count > 0)
-                {
-                    <select name="itemquantity@(item.Id)" class="qty-dropdown noskin">
-                        @foreach (var qty in item.AllowedQuantities)
-                        {
-                            <option selected="@qty.Selected" value="@qty.Value">@qty.Value</option>
-                        }
-                    </select>
-                }
-                else
-                {
-                    <div class="qty-input">
-				        <input id="itemquantity@(item.Id)" name="itemquantity@(item.Id)" type="text" value="@item.EnteredQuantity" class="form-control"
-                               data-min="@item.MinOrderAmount" data-max="@item.MaxOrderAmount" data-postfix="@item.QuantityUnitName" data-step="@item.QuantityStep" />
-                    </div>
-                }
+                @Html.EditorFor(x => item, "QtyInput", new { itemId = "itemquantity{0}".FormatWith(item.Id) })
             }
             else
             {
@@ -142,7 +126,7 @@
 							<div class="bundle-item-image" style="@("min-width: {0}px; min-height: {0}px;".FormatWith(Model.BundleThumbSize + 10))">
 								@if (item.Picture.ImageUrl.HasValue() && !item.BundleItem.HideThumbnail)
 								{
-									<img class="img-polaroid" src="@item.Picture.ImageUrl" alt="@item.Picture.AlternateText" title="@item.Picture.Title" />
+									<img src="@item.Picture.ImageUrl" alt="@item.Picture.AlternateText" title="@item.Picture.Title" />
 								}
 							</div>
 						}						
