--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_cart.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_cart.scss
@@ -233,3 +233,8 @@
 	}
 }
 
+.table-order-products .productpicture,
+.table-order-products .remove,
+.table-order-products .addtocart {
+    text-align: center;
+}
