--- a/src/Presentation/SmartStore.Web/Views/Blog/BlogPost.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Blog/BlogPost.cshtml
@@ -100,7 +100,7 @@
                             @if (!String.IsNullOrEmpty(comment.CustomerAvatarUrl))
                             {
 								<div class="comment-avatar">
-									<img src="@(comment.CustomerAvatarUrl)" class="avatar-img img-polaroid" title="avatar" alt="avatar" />
+									<img src="@(comment.CustomerAvatarUrl)" class="avatar-img img-thumbnail" title="avatar" alt="avatar" />
 								</div>
                             }
 
