Added setting to specify whether the product manufacturer should be displayed in product detail

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
@@ -25,7 +25,8 @@
             $("#@Html.FieldIdFor(model => model.ShowManufacturersOnHomepage)").click(toggleManufacturersOnHomepage);
         	$("#@Html.FieldIdFor(model => model.ProductsAlsoPurchasedEnabled)").click(toggleProductsAlsoPurchasedNumber);
             $("#@Html.FieldIdFor(model => model.CompareProductsEnabled)").click(toggleCompareProducts);
-        	$("#@Html.FieldIdFor(model => model.EnableHtmlTextCollapser)").click(toggleHtmlTextCollapsedHeight);
+            $("#@Html.FieldIdFor(model => model.EnableHtmlTextCollapser)").click(toggleHtmlTextCollapsedHeight);
+            $("#@Html.FieldIdFor(model => model.ShowManufacturerInProductDetail)").click(toggleManufacturerPictures);
 
         	$("#@Html.FieldIdFor(model => model.FilterEnabled)").change(function () {
         		$('#ProductFilterTable').find('.product-filter-option').toggle($(this).is(':checked'));
@@ -40,6 +41,7 @@
             toggleCompareProducts();
             toggleHtmlTextCollapsedHeight();
             toggleManufacturersOnHomepage();
+            toggleManufacturerPictures();
         });
 
         function toggleShowCategoryProductNumberIncludingSubcategories() {
@@ -106,7 +108,7 @@
                 $('#pnlProductsAlsoPurchasedNumber').hide();
             }
         }
-        
+
         function toggleCompareProducts() {
             if ($('#@Html.FieldIdFor(model => model.CompareProductsEnabled)').is(':checked')) {
                 $('#pnlIncludeShortDescriptionInCompareProducts').show();
@@ -116,7 +118,7 @@
                 $('#pnlIncludeFullDescriptionInCompareProducts').hide();
             }
         }
-        
+
         function toggleHtmlTextCollapsedHeight() {
             if ($('#@Html.FieldIdFor(model => model.EnableHtmlTextCollapser)').is(':checked')) {
                 $('#pnlHtmlTextCollapsedHeight').show();
@@ -125,6 +127,17 @@
                 $('#pnlHtmlTextCollapsedHeight').hide();
             }
         }
+
+        function toggleManufacturerPictures() {
+            if ($('#@Html.FieldIdFor(model => model.ShowManufacturerInProductDetail)').is(':checked')) {
+                $('.manufacturer-pictures').show();
+            }
+            else {
+                $('.manufacturer-pictures').hide();
+            }
+        }
+
+
     </script>
 
     Html.RenderAction("StoreScopeConfiguration", "Setting"); 
@@ -826,7 +839,16 @@
                 @Html.ValidationMessageFor(model => model.DisplayAllImagesNumber)
             </td>
         </tr>
-		<tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.ShowManufacturerInProductDetail)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.ShowManufacturerInProductDetail)
+                @Html.ValidationMessageFor(model => model.ShowManufacturerInProductDetail)
+            </td>
+        </tr>
+		<tr class="manufacturer-pictures">
 			<td class="adminTitle">
 				@Html.SmartLabelFor(model => model.ShowManufacturerPicturesInProductDetail)
 			</td>
