Resolves #1093 New product properties required for selling abroad

--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -353,6 +353,24 @@
 		</tr>
 		<tr>
 			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.CustomsTariffNumber)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => model.CustomsTariffNumber)
+				@Html.ValidationMessageFor(model => model.CustomsTariffNumber)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.CountryOfOriginId)
+			</td>
+			<td class="adminData">
+				@Html.DropDownListFor(model => model.CountryOfOriginId, Model.AvailableCountries, T("Common.Unspecified"))
+				@Html.ValidationMessageFor(model => model.CountryOfOriginId)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
 				@Html.SmartLabelFor(model => model.AdminComment)
 			</td>
 			<td class="adminData">
